src/objects/pymt__Shopping_Cart_Item__c.object
<CustomObject>
    <customHelpPage>pymt__Help</customHelpPage>
    <description>Stores line-item details for payments recorded in Salesforce through PaymentConnect.</description>
    <fields>
        <fullName>pymt__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shopping Cart Items</relationshipLabel>
        <relationshipName>R00N40000001tGO4EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Description__c</fullName>
        <inlineHelpText>A detailed description of an item (color, size, other options)</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Shopping Cart Items</relationshipLabel>
        <relationshipName>R00N40000001tGO3EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Line_Number__c</fullName>
        <description>Sort order for shopping cart items.</description>
        <inlineHelpText>Sort order for shopping cart items.</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__On_Payment_Completed__c</fullName>
        <label>On Payment Completed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Payment_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked automatically when the parent Payment record status is set to &apos;Completed&apos;.</inlineHelpText>
        <label>Payment Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>pymt__PaymentX__c</referenceTo>
        <relationshipLabel>Shopping Cart Items</relationshipLabel>
        <relationshipName>R00N40000001tGNtEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Shopping Cart Items</relationshipLabel>
        <relationshipName>R00N40000001tGNZEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this item has been shipped.</description>
        <inlineHelpText>Check if this item has been shipped.</inlineHelpText>
        <label>Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Tangible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the item is a physical product (ie may require shipping)</description>
        <inlineHelpText>Check if the item is a physical product (ie may require shipping)</inlineHelpText>
        <label>Tangible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the item is taxable.</description>
        <inlineHelpText>Check if the item is taxable.</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Total__c</fullName>
        <formula>if( OR( ISNULL(pymt__Quantity__c), ISNULL( pymt__Unit_Price__c)), 0,pymt__Quantity__c  * pymt__Unit_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Tracking_Number__c</fullName>
        <description>Tracking number assigned when shipping this item.</description>
        <inlineHelpText>Tracking number assigned when shipping this item.</inlineHelpText>
        <label>Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Shopping Cart Item</label>
    <listViews>
        <fullName>pymt__All</fullName>
        <columns>pymt__Payment__c</columns>
        <columns>pymt__Contact__c</columns>
        <columns>pymt__Quantity__c</columns>
        <columns>NAME</columns>
        <columns>pymt__Unit_Price__c</columns>
        <columns>pymt__Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shopping Cart Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>